# kpi-5

./: .gitignore  README.md
ai/lab/lab-1-18.09.2023/: report.md
ai/lab/lab-2-2.10.2023/: report.md
ai/lab/lab-3-17.10.2023/: report.md
ai/lab/lab-4-15.11.2023/: readme.md
ai/lab/lab-5-27.11.2023/: readme.md
auto/lab/lab-1-26.10.2023/: V511_L1_PIB.slx  V511_L1_PIB.slx.original  V511_L1_PIB.slx.r2022b
auto/lab/lab-2-28.10.2023/: V511_L2.slx  V511_L2.slx.original  V511_L2.slx.r2018b  dsyseq.asv  dsyseq.m  prgrio.m
auto/lab/lab-3-13.11.2023/: ImpStepResp.slx  V511_L3_PIB.slx  V511_L3_PIB.slx.original  ZOH_ie.slx  mL3.m  mL3dly.m
auto/lab/lab-4-16.11.2023/: V511_L4_TDI.slx  V511_L4_TDI.slx.r2018b  mL4.m
auto/lab/lab-5-25.11.2023/: DMikh.m  V511_L5_TDI.slx  V511_L5_TDI.slx.r2018b  V511_L5_TDI.slxc  pz5.m
auto/lab/lab-6-05.12.2023/: LR6.slx  LR6.slx.original  LR6.slxc  mL6.m
auto/lab/lab-7-17.12.2023/: L7.slx  L7.slx.original  L7.slxc  mL7.m
auto/lab/lab-8-21.12.2023/: LR8n.slx  LR8n.slx.r2018b  LR8n.slxc  mL8n.m
auto/report/report-1-08.10.2023/: report.md
auto/report/report-2-28.10.2023/: report.md
auto/report/report-3-17.11.2023/: report.md
ce/lab/lab-1-17.11.2023/: .cproject  Lab1 Debug.launch  Lab1.ioc  readme.md
ce/lab/lab-2-07.12.2023/: .mxproject  interrupter Debug.launch  interrupter.ioc  readme.md
ce/lab/lab-2-19.10.2023/: readme.md
ce/lab/lab-3-07.12.2023/: countdown Debug.launch  countdown.ioc  readme.md
ce/lab/lab-4-09.12.2023/: .mxproject  analoging Debug.launch  analoging.ioc  readme.md
ce/lab/lab-6-09.12.2023/: .mxproject  musical Debug.launch  musical.ioc  readme.md
cpp/lab/lab-1-25.09.2023/: readme.md
cpp/lab/lab-1-25.09.2023/workermanager/: AddCommand.h  CMakeLists.txt  Commands.cpp  Commands.h  DeleteCommand.h  Employee.h  GetCommand.h  IAddCommand.cpp  IAddCommand.h  IDeleteCommand.cpp  IDeleteCommand.h  IGetCommand.cpp  IGetCommand.h  IJsonParser.h  main.cpp  test.h  test.json
cpp/lab/lab-1-25.09.2023/workermanager/commands/: Commands.cpp  Commands.h
cpp/lab/lab-1-25.09.2023/workermanager/commands/Add/: AddCommand.cpp  IAddCommand.cpp
cpp/lab/lab-1-25.09.2023/workermanager/commands/Delete/: DeleteCommand.cpp  IDeleteCommand.h
cpp/lab/lab-1-25.09.2023/workermanager/commands/Get/: GetCommand.h  IGetCommand.h
cpp/lab/lab-1-25.09.2023/workermanager/commands/Move/: IMoveCommand.cpp  IMoveCommand.h  MoveCommand.cpp  MoveCommand.h
cpp/lab/lab-1-25.09.2023/workermanager/entities/: Employee.h
cpp/lab/lab-1-25.09.2023/workermanager/tools/: IJsonParser.cpp  JsonParser.cpp  JsonParser.h
cpp/lab/lab-2-09.10.2023/: readme.md
cpp/lab/lab-3-23.10.2023/: readme.md
cpp/lab/lab-3-23.10.2023/cprep/: CMakeLists.txt  main.cpp
cpp/lab/lab-3-23.10.2023/cprep/program/: IProgram.cpp  IProgram.h  Program.cpp  Program.h
cpp/lab/lab-3-23.10.2023/cprep/program/option-parser/: IOptionParser.cpp  IOptionParser.h  OptionParser.cpp  OptionParser.h
cpp/lab/lab-3-23.10.2023/cprep/program/queue/: IQueue.cpp  IQueue.h  IQueueFactory.cpp  IQueueFactory.h  Queue.cpp  Queue.h  QueueFactory.cpp  QueueFactory.h
cpp/lab/lab-3-23.10.2023/cprep/program/result-parser/: IResultExporter.cpp  IResultExporter.h  ResultExporter.cpp  ResultExporter.h
cpp/lab/lab-3-23.10.2023/cprep/program/utils/: Option.h  Options.h  RegexResult.h  RegexTask.h  Result.h  Task.h  UserOptions.h
cpp/lab/lab-3-23.10.2023/cprep/program/worker/: IWorker.cpp  IWorker.h  Worker.cpp  Worker.h
cpp/lab/lab-4-21.11.2023/: readme.md
cpp/lab/lab-5-13.12.2023/: readme.md
eng/ha/ha-1-07.09.2023/: test.md
eng/ha/ha-10-09.11.2023/: ha10.md
eng/ha/ha-11-16.11.2023/: ha11.md
eng/ha/ha-12-23.11.2023/: ha12.md
eng/ha/ha-13-07.12.2023/: ha13.md
eng/ha/ha-14-07.12.2023/: ha14.md
eng/ha/ha-2-15.09.2023/: ha2.md
eng/ha/ha-3-21.09.2023/: ha3.md
eng/ha/ha-4-27.09.2023/: ha4.md
eng/ha/ha-5-09.10.2023/: ha5.md
eng/ha/ha-6-12.10.2023/: ha6.md
eng/ha/ha-7-19.10.2023/: ha7.md
eng/ha/ha-8-28.10.2023/: ha.md
eng/ha/ha-9-02.11.2023/: ha9.md
eng/presentation/microservicearch/: readme.md
eng/test/: progres-test.md
iot/lab/lab-1-14.09.2023/: main.c  report.md
iot/lab/lab-10-08.11.2023/: main.c  readme.md
iot/lab/lab-11-04.12.2023/: main.c  readme.md
iot/lab/lab-12-04.12.2023/: main.c  readme.md
iot/lab/lab-13-04.12.2023/: main.c  readme.md
iot/lab/lab-14-04.12.2023/: main.c  readme.md
iot/lab/lab-15-04.12.2023/: main.c  readme.md
iot/lab/lab-2-27.09.2023/: main.c  report.md
iot/lab/lab-3-27.09.2023/: main.c  report.md
iot/lab/lab-4-09.10.2023/: main.c  report.md
iot/lab/lab-5-10.10.2023/: main.c  report.md
iot/lab/lab-6-07.11.2023/: main.c  report.md
iot/lab/lab-7-07.11.2023/: main.c  report.md
iot/lab/lab-8-07.11.2023/: main.c  readme.md
iot/lab/lab-9-08.11.2023/: main.c  readme.md
sec/lab/lab-1-10.10.2023/: report.md
sec/lab/lab-2-10.10.2023/: report.md
sec/lab/lab-3-25.10.2023/: main.md
sec/lab/lab-4-09.10.2023/: readme.md
sec/lab/lab-5-22.11.2023/: calc.py  readme.md
(+62 files in other folders)
